# audio_converter

./: README.md  predict.py  pyproject.toml  replicate.yaml
audio_converter/: __init__.py  cli.py  converter.py
tests/: test_cli.py
