[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "audio-converter"
version = "0.1.0"
description = "FFmpeg-backed converter for M4A to MP3, tuned for long recordings"
readme = "README.md"
authors = [{ name = "audio_converter" }]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
audio-converter = "audio_converter.cli:main"
